lipu-nasin-pona: 16

--- a/lipu-nasin-pona/16.md
+++ b/lipu-nasin-pona/16.md
@@ -12,18 +12,18 @@ sidebar:
 
 {:.loseta}
 |:-:|-|-
-| 致虚极                   |                                     | Effect vacuity to the extreme.
-| 守静笃                   |                                     | Keep stillness whole.
-| 万物并作                 |                                     | Myriad things act in concert.
-| 吾以观复                 |                                     | I therefore watch their return.
-| 夫物芸芸<wbr/>各复归其根 |                                     | All things flourish and each returns to its root.
-| 归根曰静                 |                                     | Returning to the root is called quietude.
-| 是谓复命                 |                                     | Quietude is called returning to life.
-| 复命曰常                 |                                     | Return to life is called constant.
-| 知常曰明                 |                                     | Knowing this constant is called illumination.
-| 不知常<wbr/>妄作凶       |                                     | Acting arbitrarily without knowing the constant is harmful.
-| 知常容<wbr/>容乃公       |                                     | Knowing the constant is receptivity, which is impartial.
-| 公乃王                   |                                     | Impartiality is kingship.
+| 致虚极                   | o tan e _weka_ mute.                | Effect vacuity to the extreme.
+| 守静笃                   | o awen e _lape_ lon.                | Keep stillness whole.
+| 万物并作                 | ijo ale li pali wan.                | Myriad things act in concert.
+| 吾以观复                 | mi lukin la: ona li kama sin.       | I therefore watch their return.
+| 夫物芸芸<wbr/>各复归其根 | ijo ale li mute mute. taso ona li kama sin tawa _mama ona_. | All things flourish and each returns to its root.
+| 归根曰静                 | nimi pi kama sin tawa mama li _..._ | Returning to the root is called quietude.
+| 是谓复命                 | nimi pi _..._ li kama tawa _..._    | Quietude is called returning to life.
+| 复命曰常                 | nimi pi kama tawa _..._ li _lon_.   | Return to life is called constant.
+| 知常曰明                 | nimi pi sona _lon_ li suno.         | Knowing this constant is called illumination.
+| 不知常<wbr/>妄作凶       | sona ala lon li _pakala_.           | Acting arbitrarily without knowing the constant is harmful.
+| 知常容<wbr/>容乃公       | sona lon li ken. _ken li kulupu_.   | Knowing the constant is receptivity, which is impartial.
+| 公乃王                   | _kulupu_ li lawa.                   | Impartiality is kingship.
 | 王乃天                   | lawa li sewi.                       | Kingship is Heaven.
 | 天乃道                   | sewi li nasin.                      | Heaven is the Way
 | 道乃久                   | sewi Nasin li tenpo ale.            | the Way is eternal.
