--- a/lipu-nasin-pona/11.md
+++ b/lipu-nasin-pona/11.md
@@ -34,6 +34,6 @@ pali e tomo la, jan li lupa e sinpin.
 insa tomo li ala. tan ni la, jan li kepeken e tomo.
 tan pona ona la, jan li kepeken e ijo lon.
 tan pali ona la, jan li kepeken e weka.
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:sitelen data-sitelen-ratio="0.5"}
 
 {% include sitelen-sitelen-renderer.html %}
