--- a/lipu-nasin-pona/12.md
+++ b/lipu-nasin-pona/12.md
@@ -30,8 +30,10 @@ kalama ale li pakala e kute.
 namako ale li pakala e uta.
 tawa en alasa li pakala e lawa.
 ijo mani li pakala e pona jan.
+{:sitelen data-sitelen-ratio="0.2"}
+
 o pali tan pilin, o pali ala tan lukin.
 o weka e ona, o anu e ni.
-{:data-sitelen="true" data-sitelen-ratio="0.2"}
+{:sitelen data-sitelen-ratio="1.3"}
 
 {% include sitelen-sitelen-renderer.html %}
