--- a/lipu-nasin-pona/13.md
+++ b/lipu-nasin-pona/13.md
@@ -32,6 +32,6 @@ sidebar:
 {:#sitelen}
 
 ...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:sitelen data-sitelen-ratio="0.5"}
 
 {% include sitelen-sitelen-renderer.html %}
