--- a/lipu-nasin-pona/17.md
+++ b/lipu-nasin-pona/17.md
@@ -12,14 +12,14 @@ sidebar:
 
 {:.loseta}
 |:-:|-|-
-| 太上<wbr/>下知有之     |  | From great antiquity forth they have known and possessed it.
-| 其次<wbr/>亲而誉之     |  | Those of the next level loved and praised it.
-| 其次<wbr/>畏之         |  | The next were in awe of it.
-| 其次<wbr/>侮之         |  | And the next despised it.
-| 信不足<wbr/>焉有不信焉 |  | If you lack sincerity no one will believe you.
-| 悠兮<wbr/>其贵言       |  | How careful she is with her precious words!
-| 功成事遂               |  | When her work is complete and her job is finished,
-| 百姓皆谓我自然         |  | Everybody says: “We did it!”
+| 太上下<wbr/>知有之 | lawa suli li sona e ona.                 | From great antiquity forth they have known and possessed it.
+| 其次亲<wbr/>而誉之 | jan anpa pi lawa suli li olin e ona.     | Those of the next level loved and praised it.
+| 其次畏之           | jan anpa pi jan anpa li _monsuta_ e ona. | The next were in awe of it.
+| 其次侮之           | jan noka li jaki e ona.                  | And the next despised it.
+| 信不足焉<wbr/>有不信焉 | jan pi pilin ala la, jan ala li pilin e jan ni. | If you lack sincerity no one will believe you.
+| 悠兮其贵言             | o olin a e toki pona!                           | How careful she is with her precious words!
+| 功成事遂               | ona li pali pini la,                            | When her work is complete and her job is finished,
+| 百姓皆谓<wbr/>我自然   | jan ale li toki e ni: mi li pali a!             | Everybody says: “We did it!”
 
 {% include kasi-nav.html num=17 %}
 
@@ -27,6 +27,6 @@ sidebar:
 {:#sitelen}
 
 ...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:sitelen data-sitelen-ratio="1"}
 
 {% include sitelen-sitelen-renderer.html %}
