--- a/lipu-nasin-pona/4.md
+++ b/lipu-nasin-pona/4.md
@@ -30,27 +30,27 @@ sidebar:
 {:#sitelen}
 
 sewi Nasin li suli mute.
-{:data-sitelen="true" data-sitelen-ratio="1"}
+{:sitelen data-sitelen-ratio="1"}
 
 jan li ken ala pali weka e ona.
-{:data-sitelen="true" data-sitelen-ratio="2"}
+{:sitelen data-sitelen-ratio="2"}
 
 suli a!
-{:data-sitelen="true" data-sitelen-ratio="1"}
+{:sitelen data-sitelen-ratio="1"}
 
 ona li mama e ijo ale.
 ona li suwi e wawa.
 ona li pona e nasa.
 ona li kon e kiwen.
 ona li sama e tu.
-{:data-sitelen="true" data-sitelen-ratio="0.3"}
+{:sitelen data-sitelen-ratio="0.3"}
 
 wawa a!
-{:data-sitelen="true" data-sitelen-ratio="1"}
+{:sitelen data-sitelen-ratio="1"}
 
 tenpo kama la ona li lon.
 mi suno ala la seme li mama ona?
 ona li mama e jan lawa wawa.
-{:data-sitelen="true" data-sitelen-ratio="0.3"}
+{:sitelen data-sitelen-ratio="0.3"}
 
 {% include sitelen-sitelen-renderer.html %}
