--- a/lipu-nasin-pona/6.md
+++ b/lipu-nasin-pona/6.md
@@ -24,6 +24,6 @@ sidebar:
 -------
 {:#sitelen}
 
-{:data-sitelen="true" data-sitelen-ratio="10"}
+{:sitelen data-sitelen-ratio="10"}
 
 {% include sitelen-sitelen-renderer.html %}
