--- a/lipu-nasin-pona/7.md
+++ b/lipu-nasin-pona/7.md
@@ -27,21 +27,21 @@ sidebar:
 {:#sitelen}
 
 sewi en ma li lon tenpo ale.
-{:data-sitelen="true" data-sitelen-ratio="5"}
+{:sitelen data-sitelen-ratio="5"}
 
 sewi en ma li tenpo tan ni,
 ona li mama ala e ona.
-{:data-sitelen="true" data-sitelen-ratio="2"}
+{:sitelen data-sitelen-ratio="2"}
 
 tan ni li ken lon e tenpo ale.
-{:data-sitelen="true" data-sitelen-ratio="5"}
+{:sitelen data-sitelen-ratio="5"}
 
 sona ni la jan sewi li monsi e jan sewi, taso ona li sinpin.
-{:data-sitelen="true" data-sitelen-ratio="2"}
+{:sitelen data-sitelen-ratio="2"}
 
 jan sewi li poka e jan sewi, taso ona li insa.
 tan ala anu seme?
 pilin insa ona li len ala la ona li ken pona e pilin insa!
-{:data-sitelen="true" data-sitelen-ratio="5"}
+{:sitelen data-sitelen-ratio="5"}
 
 {% include sitelen-sitelen-renderer.html %}
