--- a/lipu-nasin-pona/9.md
+++ b/lipu-nasin-pona/9.md
@@ -24,6 +24,6 @@ sidebar:
 -------
 {:#sitelen}
 
-{:data-sitelen="true" data-sitelen-ratio="1"}
+{:sitelen data-sitelen-ratio="1"}
 
 {% include sitelen-sitelen-renderer.html %}
