--- a/lipu-nasin-pona/10.md
+++ b/lipu-nasin-pona/10.md
@@ -35,6 +35,6 @@ sidebar:
 -------
 {:#sitelen}
 
-{:data-sitelen="true" data-sitelen-ratio="1"}
+{:sitelen data-sitelen-ratio="1"}
 
 {% include sitelen-sitelen-renderer.html %}
