--- a/lipu-nasin-pona/14.md
+++ b/lipu-nasin-pona/14.md
@@ -39,6 +39,6 @@ sidebar:
 {:#sitelen}
 
 ...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:sitelen data-sitelen-ratio="0.5"}
 
 {% include sitelen-sitelen-renderer.html %}
