--- a/lipu-nasin-pona/15.md
+++ b/lipu-nasin-pona/15.md
@@ -37,6 +37,6 @@ sidebar:
 {:#sitelen}
 
 ...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:sitelen data-sitelen-ratio="0.5"}
 
 {% include sitelen-sitelen-renderer.html %}
