--- a/lipu-nasin-pona/16.md
+++ b/lipu-nasin-pona/16.md
@@ -35,6 +35,6 @@ sidebar:
 {:#sitelen}
 
 ...
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:sitelen data-sitelen-ratio="0.5"}
 
 {% include sitelen-sitelen-renderer.html %}
