--- a/lipu-nasin-pona/5.md
+++ b/lipu-nasin-pona/5.md
@@ -36,6 +36,6 @@ jan li weka e ona la, kin ona li ken jo.
 jan li pali e ona la, kin ona li ken pana.
 nimi mute li nanpa ike.
 pona la, awen e insa.
-{:data-sitelen="true" data-sitelen-ratio="0.5"}
+{:sitelen data-sitelen-ratio="0.5"}
 
 {% include sitelen-sitelen-renderer.html %}
