--- a/lipu-nasin-pona/8.md
+++ b/lipu-nasin-pona/8.md
@@ -30,6 +30,6 @@ sidebar:
 -------
 {:#sitelen}
 
-{:data-sitelen="true" data-sitelen-ratio="1"}
+{:sitelen data-sitelen-ratio="1"}
 
 {% include sitelen-sitelen-renderer.html %}
