lipu-nasin-pona: 15

--- a/lipu-nasin-pona/15.md
+++ b/lipu-nasin-pona/15.md
@@ -12,24 +12,24 @@ sidebar:
 
 {:.loseta}
 |:-:|-|-
-| 古之善为士者       |  | The ancient masters of the Way
-| 微妙玄通           |  | Had subtle marvelous mystic penetration
-| 深不可识           |  | A depth that cannot be known.
-| 夫唯不可识         |  | It is exactly because that they are unknowable
-| 故强为之容         |  | That we are forced to pay attention to their appearance.
-| 豫兮若冬涉川       | awen a! ...  | Hesitant, like one crossing an ice-covered river.
-| 犹兮若畏四邻       | pali a! ... jan poka ... | Ready, like one afraid of his neighbors on all sides.
-| 俨兮其若容         | sin a! ... | Dignified, like a guest.
-| 涣兮若冰之将释     | linja a! ... | Loose, like ice about to melt.
-| 敦兮其若朴         | wawa a! ... | Straightforward, like an uncarved block of wood.
-| 旷兮其若谷         | open a! ... | Open, like a valley.
-| 混兮其若浊         | pimeja a! ... | Obscure, like muddy water.
-| 孰能浊以静之徐清   |  | Who can be muddled, and use clarity to gradually become lucid?
-| 孰能安以久动之徐生 |  | Who can be calm, and use constant application for eventual success?
-| 保此道者           |  | The one who holds to this path does not crave fulfillment.
-| 不欲盈             |  | Precisely because he does not crave fulfillment
-| 夫唯不盈           |  | He can be shattered
-| 故能蔽不新成       |  | And do without quick restitution.
+| 古之<wbr/>善为士者 | sewi Nasin la, jan pi ken wawa… | The ancient masters of the Way
+| 微妙玄通     | … li _linluwi_ wawa nasa,       | Had subtle marvelous mystic penetration
+| 深不可识     | … li suli sama ken ala sona.    | A depth that cannot be known.
+| 夫唯不可识   | jan li ken ala sona e ona la,   | It is exactly because that they are unknowable
+| 故强为之容   | … o taso lukin e sitelen ona.   | That we are forced to pay attention to their appearance.
+| 豫兮<wbr/>若冬涉川   | _awen_ a, sama e jan pi pali _suli ike_.          | Hesitant, like one crossing an ice-covered river.
+| 犹兮<wbr/>若畏四邻   | _sona_ a, sama e jan pi monsuta tan jan poka ale. | Ready, like one afraid of his neighbors on all sides.
+| 俨兮<wbr/>其若容     | _olin_ a, sama e jan pi _kama sin_.               | Dignified, like a guest.
+| 涣兮<wbr/>若冰之将释 | _linja_ a, sama e telo kiwen _pi seli lili_.      | Loose, like ice about to melt.
+| 敦兮<wbr/>其若朴     | pona a, sama e _kiwen pali pi pali ala_.          | Straightforward, like an uncarved block of wood.
+| 旷兮<wbr/>其若谷     | open a, sama e _ma lupa_.                         | Open, like a valley.
+| 混兮<wbr/>其若浊     | pimeja a, sama e telo jaki.                       | Obscure, like muddy water.
+| 孰能浊以静<wbr/>之徐清   | jan seme li ken _awen e telo jaki la, telo jaki li pona_? | Who can be muddled, and use clarity to gradually become lucid?
+| 孰能安以久动<wbr/>之徐生 | jan seme li ken _pali e ijo awen la, ijo awen li tawa_?   | Who can be calm, and use constant application for eventual success?
+| 保此道者     | jan pi olin nasin…                          | The one who holds to this path
+| 不欲盈       | … li wile ala.                              | […] does not crave fulfillment.
+| 夫唯不盈     | jan pi wile ala…                            | Precisely because he does not crave fulfillment
+| 故能蔽不新成 | li ken _len_, li ken _wile ala e pali sin_. | He can be shattered[,] And do without quick restitution.
 
 {% include kasi-nav.html num=15 %}
 
