lipu-nasin-pona: names not numbers

--- a/lipu-nasin-pona/3.md
+++ b/lipu-nasin-pona/3.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa 3 • lipu Nasin Pona
+title: pali ala • lipu Nasin Pona
 sidebar:
   - title: "kasi ante"
     text: |
