--- a/lipu-nasin-pona/1.md
+++ b/lipu-nasin-pona/1.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa wan • lipu Nasin Pona
+title: lupa pi nasa pona ale • lipu Nasin Pona
 sidebar:
   - title: "kasi ante"
     text: |
