--- a/lipu-nasin-pona/13.md
+++ b/lipu-nasin-pona/13.md
@@ -21,10 +21,10 @@ sidebar:
 | 是谓宠辱若惊       | ni li te pona e jaki, sama e wile ala to.             | That's why I say, “Accept humiliation as a surprise.”
 | 何谓贵大患若身     | te olin e pakala suli, sama e sijelo sina to li seme? | What do I mean by “Value great misfortune as your own self”?
 | 吾所以有大患者<wbr/>为吾有身<wbr/>及吾无身<wbr/>吾有何患 | mi jan ala la, mi seme e pakala a? | If I have no self, how could I experience misfortune?
-| 故贵以身为天下 | sina mama e jan ale la: | Therefore, if you dedicate your life for the benefit of the world,
-| 若可寄天下     | jan ale li mama e sina. | You can rely on the world.
+| 故贵以身为天下 | sina mama e ijo ale la: | Therefore, if you dedicate your life for the benefit of the world,
+| 若可寄天下     | ijo ale li mama e sina. | You can rely on the world.
 | 爱以身为天下   | sina olin e pali ni la: | If you love dedicating yourself in this way,
-| 若可託天下     | jan ale li olin e sina. | You can be entrusted with the world.
+| 若可託天下     | ijo ale li olin e sina. | You can be entrusted with the world.
 
 {% include kasi-nav.html num=13 %}
 
