--- a/lipu-nasin-pona/2.md
+++ b/lipu-nasin-pona/2.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kasi nanpa tu • lipu Nasin Pona
+title: sona pi toki ala • lipu Nasin Pona
 sidebar:
   - title: "kasi ante"
     text: |
